--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -12,6 +12,7 @@
     <link rel="shortcut icon" href="favicon.ico" />
     <link rel="manifest" href="manifest.webapp" />
     <link rel="stylesheet" href="content/css/loading.css">
+    <link rel="stylesheet" href="content/css/sgLoading.css">
     <!-- jhipster-needle-add-resources-to-root - JHipster will add new resources here -->
 </head>
 <body>
@@ -19,15 +20,22 @@
         <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
     <jhi-main>
-        <div class="app-loading">
+<!--        <div class="app-loading">
             <div class="lds-css ng-scope">
                 <div class="lds-pacman">
                     <div><div></div><div></div><div></div></div>
                     <div><div></div><div></div><div></div></div>
                 </div>
             </div>
+        </div>-->
+        <div class="spinner">
+            <div class="rect1"></div>
+            <div class="rect2"></div>
+            <div class="rect3"></div>
+            <div class="rect4"></div>
+            <div class="rect5"></div>
         </div>
-        <div class="app-loading">
+        <div class="spinner"> <!--app-loading-->
             <div id="jhipster-error" style="display:none">
                 <!-- This content is for troubleshooting purpose and will be removed when app renders -->
                 <h1>An error has occurred :-(</h1>
